--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "es6-promise": "1.0.*",
     "express-negotiate": "0.0.*"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  }
 }
