--- a/modules/alod-web-interface/package.json
+++ b/modules/alod-web-interface/package.json
@@ -24,6 +24,6 @@
     "rdf-fetch": "^0.3.2",
     "rdf2h": "^0.3.0",
     "shelljs": "^0.7.0",
-    "sparql-http-client", "^1.0.0"
+    "sparql-http-client": "^1.0.0"
   }
 }
