--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -19,13 +19,14 @@
     "bluebird": "^3.4.0",
     "browserify": "^13.0.1",
     "clusterize.js": "^0.16.0",
+    "color-hash": "^1.0.3",
+    "crab-event": "^0.1.0",
+    "debounce": "^1.0.0",
     "inherits": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
     "rdf-fetch": "^0.3.2",
     "rdf2h": "^0.3.0",
     "shelljs": "^0.7.0",
-    "sparql-http-client": "^1.0.0",
-    "debounce": "^1.0.0",
-    "color-hash": "^1.0.3"
+    "sparql-http-client": "^1.0.0"
   }
 }
