--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -10,7 +10,9 @@
   "bugs": {
     "url": "https://github.com/zazukoians/alod-web-interface/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.14.1"
+  },
   "license": "MIT",
   "scripts": {
     "build": "node build.js"
