--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -16,7 +16,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "lint": "standard lib/*.js"
   },
   "devDependencies": {
     "bluebird": "^3.4.0",
@@ -29,6 +30,7 @@
     "isomorphic-fetch": "^2.2.1",
     "rdf-fetch": "^0.3.2",
     "shelljs": "^0.7.0",
-    "sparql-http-client": "^1.0.0"
+    "sparql-http-client": "^1.0.0",
+    "standard": "^8.0.0"
   }
 }
