use js-string-escape-cli to convert queries to CommonJS modules and replaced the fetch code

--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -28,6 +28,7 @@
     "debounce": "^1.0.0",
     "inherits": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-string-escape-cli": "^1.0.0",
     "rdf-fetch": "^0.3.2",
     "shelljs": "^0.7.0",
     "sparql-http-client": "^1.0.0",
