--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -29,6 +29,7 @@
     "inherits": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
     "js-string-escape-cli": "^1.0.0",
+    "minifyify": "^7.3.3",
     "rdf-fetch": "^0.3.2",
     "shelljs": "^0.7.0",
     "sparql-http-client": "^1.0.0",
