--- a/modules/zack/package.json
+++ b/modules/zack/package.json
@@ -14,8 +14,6 @@
     "bluebird": "^3.4.0",
     "browserify": "^13.0.1",
     "cancelable-fetch": "^1.0.0",
-    "clusterize.js": "^0.16.0",
-    "clusterize.js-paging": "^1.0.0",
     "color-hash": "^1.0.3",
     "crab-event": "^0.1.0",
     "d3": "^4.2.2",
@@ -25,9 +23,9 @@
     "js-string-escape-cli": "^1.0.0",
     "lodash": "^4.14.1",
     "minifyify": "^7.3.3",
-    "rdf-fetch": "^0.3.2",
     "shelljs": "^0.7.0",
-    "sparql-http-client": "^1.0.0"
+    "sparql-http-client": "^1.0.0",
+    "sparql-search-result-list": "^1.0.0"
   },
   "license": "MIT",
   "scripts": {
